[package]
name = "gamepod"
version = "0.1.0"
authors = ["alexander <alex.gusain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = "*"


tungstenite = "*"


physicsengine = { path = "../chesspoker_package" }